# test1

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: test_sim.cpp  test_sim.h
static/: bitloop.html
triplets/: wasm32-emscripten-multithreaded.cmake
